syntax = "proto3";
option go_package = "./pb";

enum ProtocolId {
	Hello = 0;
	Login = 1; // req: LoginC2S, res: LoginS2C
	Common = 2; // req: CommonC2S, res: CommonS2C
}

message ServerInfo {
	int32 Id = 1;
	string Name = 2;
	string Address = 3;
	repeated int32 MsgHandlers = 4;
}

message LoginC2S {
	int32 RoleId = 1;
}
message LoginS2C {
	int32 Error = 1;
}

message CommonC2S {
	int32 RoleId = 1;
}
message CommonS2C {
	int32 Error = 1;
}
